--- a/KataNumbersInWords/pom.xml
+++ b/KataNumbersInWords/pom.xml
@@ -72,7 +72,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>edu.pdx.cs410J.kata.Project1</mainClass>
+              <mainClass>edu.pdx.cs410J.kata.NumbersInWords</mainClass>
             </manifest>
           </archive>
         </configuration>
