--- a/minesweeper-kata/pom.xml
+++ b/minesweeper-kata/pom.xml
@@ -48,6 +48,11 @@
       <version>Summer2015</version>
     </dependency>
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>16.0.1</version>
+    </dependency>
+    <dependency>
       <groupId>edu.pdx.cs410J</groupId>
       <artifactId>projects</artifactId>
       <version>Summer2015</version>
