--- a/minesweeper-kata/pom.xml
+++ b/minesweeper-kata/pom.xml
@@ -77,7 +77,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>edu.pdx.cs410J.minesweeper.MineField</mainClass>
+              <mainClass>edu.pdx.cs410J.minesweeper.MinesweeperGameMainProgram</mainClass>
             </manifest>
           </archive>
         </configuration>
