--- a/minesweeper-gwt/src/main/webapp/WEB-INF/web.xml
+++ b/minesweeper-gwt/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
   <!-- Servlets -->
   <servlet>
     <servlet-name>pingServlet</servlet-name>
-    <servlet-class>edu.pdx.cs410J.minesweeper.server.PingServiceImpl</servlet-class>
+    <servlet-class>edu.pdx.cs410J.minesweeper.server.MinesweeperGameServiceImpl</servlet-class>
   </servlet>
 
   <servlet-mapping>
