--- a/minesweeper-kata/pom.xml
+++ b/minesweeper-kata/pom.xml
@@ -95,6 +95,14 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.2.1</version>
+        <configuration>
+          <attach>true</attach>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <reporting>
