--- a/minesweeper-gwt/pom.xml
+++ b/minesweeper-gwt/pom.xml
@@ -32,6 +32,10 @@
       <scope>compile</scope>
     </dependency>
   </dependencies>
+  <properties>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+  </properties>
   <build>
     <finalName>phonebill-gwt</finalName>
 
