--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,29 @@
   <scm>
     <connection>scm:git:git@github.com:DavidWhitlock/PortlandStateJavaSummer2015.git</connection>
   </scm>
+  <properties>
+    <github.global.server>github</github.global.server>
+  </properties>
     <build>
     <plugins>
+      <plugin>
+        <groupId>com.github.github</groupId>
+        <artifactId>site-maven-plugin</artifactId>
+        <version>0.12</version>
+        <configuration>
+          <message>Creating site for ${project.version}</message>
+          <userName>DavidWhitlock</userName>
+          <repositoryName>PortlandStateJavaSummer2015</repositoryName>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>site</goal>
+            </goals>
+            <phase>site</phase>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
