--- a/koans/pom.xml
+++ b/koans/pom.xml
@@ -59,6 +59,17 @@
     <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>3.3</version>
+          <dependencies>
+              <dependency>
+                  <groupId>net.trajano.wagon</groupId>
+                  <artifactId>wagon-git</artifactId>
+                  <version>2.0.0</version>
+              </dependency>
+          </dependencies>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.3</version>
@@ -123,4 +134,14 @@
       </plugin>
     </plugins>
   </build>
+  <distributionManagement>
+    <site>
+      <id>gh-pages</id>
+      <name>David Whitlock's GitHub Pages</name>
+      <url>github:http://davidwhitlock.github.io/PortlandStateJavaSummer2015/</url>
+      <!--
+      <url>git:ssh://git@github.com/trajano/trajano.git?gh-pages#</url>
+      -->
+    </site>
+  </distributionManagement>
 </project>
