--- a/minesweeper-gwt/pom.xml
+++ b/minesweeper-gwt/pom.xml
@@ -44,6 +44,17 @@
 
     <plugins>
       <plugin>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>3.3</version>
+          <dependencies>
+              <dependency>
+                  <groupId>net.trajano.wagon</groupId>
+                  <artifactId>wagon-git</artifactId>
+                  <version>2.0.0</version>
+              </dependency>
+          </dependencies>
+      </plugin>
+      <plugin>
         <!-- Need version 2.1.1 for Java 7 -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
@@ -106,4 +117,14 @@
       </build>
     </profile>
   </profiles>
+  <distributionManagement>
+    <site>
+      <id>gh-pages</id>
+      <name>David Whitlock's GitHub Pages</name>
+      <url>github:http://davidwhitlock.github.io/PortlandStateJavaSummer2015/</url>
+      <!--
+      <url>git:ssh://git@github.com/trajano/trajano.git?gh-pages#</url>
+      -->
+    </site>
+  </distributionManagement>
 </project>
