--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <packaging>pom</packaging>
   <name>PortlandStateJavaSummer2015</name>
   <description>Code that we developed in CS410J Advanced Java Programming during the Summer of 2015</description>
-  <url>http://www.cs.pdx.edu/~whitlock</url>
+  <url>http://davidwhitlock.github.io/PortlandStateJavaSummer2015</url>
   <modules>
     <module>KataNumbersInWords</module>
     <module>minesweeper-kata</module>
@@ -56,22 +56,15 @@
     <build>
     <plugins>
       <plugin>
-        <groupId>com.github.github</groupId>
-        <artifactId>site-maven-plugin</artifactId>
-        <version>0.12</version>
-        <configuration>
-          <message>Creating site for ${project.version}</message>
-          <userName>DavidWhitlock</userName>
-          <repositoryName>PortlandStateJavaSummer2015</repositoryName>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>site</goal>
-            </goals>
-            <phase>site</phase>
-          </execution>
-        </executions>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>3.3</version>
+          <dependencies>
+              <dependency>
+                  <groupId>net.trajano.wagon</groupId>
+                  <artifactId>wagon-git</artifactId>
+                  <version>2.0.0</version>
+              </dependency>
+          </dependencies>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -468,9 +461,12 @@
       <url>https://api.bintray.com/maven/davidwhitlock/maven/PortlandStateJava/;publish=1;override=1</url>
     </repository>
     <site>
-      <id>whitlock-PSU</id>
-      <name>David Whitlock's PSU Web Site</name>
-      <url>scpexe://cs.pdx.edu/u/whitlock/public_html/site</url>
+      <id>gh-pages</id>
+      <name>Trajano GitHub Pages</name>
+      <url>github:http://davidwhitlock.github.io/PortlandStateJavaSummer2015/</url>
+      <!--
+      <url>git:ssh://git@github.com/trajano/trajano.git?gh-pages#</url>
+      -->
     </site>
   </distributionManagement>
 </project>
